--- a/package.json
+++ b/package.json
@@ -1,18 +1,24 @@
 {
-  "name": "sdk50s2",
+  "name": "sdk50",
   "version": "1.0.0",
   "main": "node_modules/expo/AppEntry.js",
   "scripts": {
     "start": "expo start",
-    "android": "expo start --android",
-    "ios": "expo start --ios",
+    "android": "expo run:android",
+    "ios": "expo run:ios",
     "web": "expo start --web"
   },
   "dependencies": {
+    "@types/react": "~18.2.45",
     "expo": "~50.0.14",
+    "expo-asset": "~9.0.2",
+    "expo-file-system": "~16.0.8",
+    "expo-sqlite": "~13.4.0",
     "expo-status-bar": "~1.11.1",
+    "expo-updates": "~0.24.12",
     "react": "18.2.0",
-    "react-native": "0.73.6"
+    "react-native": "0.73.6",
+    "typescript": "^5.3.0"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0"
